# Repositorio-Personal

Practicas/Practica_Calificada3-CC232/: .gitignore  CMakeLists.txt  README.md
Practicas/Practica_Calificada3-CC232/demos/: demo_cookieselection.cpp
Practicas/Practica_Calificada3-CC232/docs/: Bitacora.md  respuestas_obligatorias.md
Practicas/Practica_Calificada3-CC232/include/: BinaryHeap.h  CookieMedian.h
Practicas/Practica_Calificada3-CC232/resultados/: casos_borde.txt  ejecucion_pc3.txt  tests_pc3.txt
Practicas/Practica_Calificada3-CC232/src/: main.cpp
Practicas/Practica_Calificada3-CC232/tests/: test_cookieselection.cpp
Practicas/Practica_Calificada3-CC232/video/: link.txt
Semana 1/: Actividad_semana1.md
Semana 2/: Actividad_semana2.md
Semana 3/: Actividad_semana3.md
Semana 4/: Actividad_semana4.md
Semana 5/: Actividad_semana5.md
Semana 6/: Actividad_semana6.md
Semana1/: Actividad_semana1.md
Semana2/: Actividad_semana2.md
Semana3/: Actividad_semana3.md
Semana4/: Actividad_semana4.md
Semana5/: Actividad_semana5.md
Semana6/: Actividad_semana6.md
